--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -24,6 +24,11 @@
     --input: 90 20% 85%;
     --ring: 140 40% 35%;
     --radius: 1rem;
+    --chart-1: 139 65% 20%;
+    --chart-2: 140 74% 44%;
+    --chart-3: 142 88% 28%;
+    --chart-4: 137 55% 15%;
+    --chart-5: 141 40% 9%;
   }
 
   .dark {
@@ -46,6 +51,11 @@
     --border: 120 20% 30%;
     --input: 120 20% 30%;
     --ring: 140 40% 45%;
+    --chart-1: 142 88% 28%;
+    --chart-2: 139 65% 20%;
+    --chart-3: 140 74% 24%;
+    --chart-4: 137 55% 15%;
+    --chart-5: 141 40% 9%;
   }
 }
 
